--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "bot de beedywool",
   "main": "index.js",
-  "scripts": {start
+  "scripts": {
 
   },
   "opusscript": "0.0.3",
